--- a/styles.css
+++ b/styles.css
@@ -1,369 +1,451 @@
-*{
-	font-size:20px;
-	font-family:Cambria;
-	
-}
-.top
-{
-	margin:1% 0% 0%;
-}
-.top1
-{
-	background-color:#FFEEEE;
-	margin:1% 0% 0%;
-	padding:10px;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
-	display:flex;
-}
-.login
-{
-	margin:5px;
-	position:absolute;
-	right:20px;
-	
-}
-.horizontal
-{
-	margin:5px;
-	border-right : 2px solid black;
-	position:relative;
-	left:260px;	
-	top:9px;
-}
-.signup
-{
-	margin:5px;
-	position:absolute;
-	right:130px;
+* {
+  font-size: 20px;
+  font-family: Cambria;
+
 }
 
-hr
-{
-    border-top: 2px solid black;
+.top {
+  margin: 1% 0% 0%;
 }
 
-.logo
-{ 
-	width: 150px;
-	height:135px;
-	mix-blend-mode: multiply;
-}	
-
-a
-{
-	text-decoration:none;
-	color:black;
-}	
-.image
-{
-	padding-top:1%;
-	padding-left:1%;
-	padding-right:1%;
-	padding-bottom:1%;
-	width:100%;
-	height:69%;
-}
-.slideimage
-{
-	filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.5)); 
-}
-.mySlides 
-{
-	display:none;
-}
-.content1
-{
-	background-color:#1A132F;
-}	
-.grp1
-{
-	position:relative;
-	left:400px;
-}
-	
-.grp2
-{
-	position:relative;
-	bottom:460px;
-	left:400px;
+.top1 {
+  background-color: #FFEEEE;
+  margin: 1% 0% 0%;
+  padding: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+  display: flex;
 }
 
-.items
-{
-	padding:1.5rem;
-	text-decoration:none;
+.login {
+  margin: 5px;
+  position: absolute;
+  right: 20px;
+
 }
-li
-{
-    display: list-item;
-    text-align: -webkit-match-parent;
+
+.horizontal {
+  margin: 5px;
+  border-right: 2px solid black;
+  position: relative;
+  left: 260px;
+  top: 9px;
+}
+
+.signup {
+  margin: 5px;
+  position: absolute;
+  right: 130px;
+}
+
+hr {
+  border-top: 2px solid black;
+}
+
+.logo {
+  width: 150px;
+  height: 135px;
+  mix-blend-mode: multiply;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.image {
+  padding-top: 1%;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-bottom: 1%;
+  width: 100%;
+  height: 69%;
+}
+
+.slideimage {
+  filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.5));
+}
+
+.mySlides {
+  display: none;
+}
+
+.content1 {
+  background-color: #1A132F;
+}
+
+.grp1 {
+  position: relative;
+  left: 400px;
+}
+
+.grp2 {
+  position: relative;
+  bottom: 460px;
+  left: 400px;
+}
+
+.items {
+  padding: 1.5rem;
+  text-decoration: none;
+}
+
+li {
+  display: list-item;
+  text-align: -webkit-match-parent;
 }
 
 .list-menu--inline {
-    display: inline-flex;
-    flex-wrap: wrap;
+  display: inline-flex;
+  flex-wrap: wrap;
 }
 
 .list-menu {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.navbar
-{
-	margin-left:330px;
-}
-.newarrivals
-{
-    background-color: #FFEEEE;
-	padding-top:20px;
-	padding-bottom:5px;
-	display:flex;
-    filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.5)); 
+.navbar {
+  margin-left: 330px;
 }
 
-.container-1
-{
-    filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.5)); 
-}
-.container1
-{
-	background-color: #FFEEEE;
-	padding-top:20px;
-	padding-bottom:20px;
-	display:flex;
-}
-.outerbox1
-{
-	background-color:#1A132F;
-	width:280px;
-	height:420px;
-	margin-left:20px;
-	margin-bottom:20px;
-	margin-top:20px;
-	box-shadow: 5px 5px 5px rgba(255, 255, 255, 0.25);
-	border-radius: 15px;	
+.categories {
+  background-color: #1A132F;
+  margin: 1%;
+  height: 65%;
+  padding-left: 4%;
+  padding-top: 2%;
+  filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.5));
 }
 
-.images
-{
-	width:84%;
-	height:70%;
-	margin-left:15px;
-	margin-top: 20px;
-	border-radius: 5px;
+.inspired {
+  float: left;
+  font-size: 45px;
+  font-family: 'sans-serif';
 }
 
-.enlarge{
-    width: 300px;
-    height: 500px;
-    overflow: hidden;
-    margin: 0 auto;
-  }
-       
-  .enlarge img{
-    width: 90%;
-    transition: 0.5s all ease-in-out;
-  }
-       
-  .enlarge:hover img{
-  transform: scale(1.5);
-  }
-
-.addtocart
-{
-	background-color:#FFEEEE;
-	width:250px;
-	height:30px;
-	border-radius:6px;
-	position:relative;
-	left:15px;
-	bottom:15px;
-	text-align:center;
-	
-}
-p
-{
-	text-align:center;
-	color:white;
-	padding-top:5px;
-}
-
-.heading
-{
-	color:black;
-	font-size:30px;
-}
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    background: #fcfcfc;
-    font-family: sans-serif;
-}
-footer{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: #111;
-    height: auto;
-    width: 100vw;
-
-    padding-top: 40px;
-    color: #fff;
-}
-.footer-content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-.footer-content h3{
-    font-size: 2.1rem;
-    font-weight: 500;
-    text-transform: capitalize;
-    line-height: 3rem;
-}
-.footer-content p{
-    max-width: 500px;
-    margin: 10px auto;
-    line-height: 28px;
-    font-size: 14px;
-    color: #cacdd2;
-}
-.socials{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0 3rem 0;
-}
-.socials li{
-    margin: 0 10px;
-}
-.socials a{
-    text-decoration: none;
-    color: #fff;
-    border: 1.1px solid white;
-    padding: 5px;
-
-    border-radius: 50%;
-
-}
-.socials a i{
-    font-size: 1.1rem;
-    width: 20px;
-
-
-    transition: color .4s ease;
-
-}
-.socials a:hover i{
-    color: aqua;
-}
-
-.footer-bottom{
-    background: #000;
-    width: 100vw;
-    padding: 20px;
-padding-bottom: 40px;
-    text-align: center;
-}
-.footer-bottom p{
-float: left;
-    font-size: 14px;
-    word-spacing: 2px;
-    text-transform: capitalize;
-}
-.footer-bottom p a{
-  color:#44bae8;
-  font-size: 16px;
-  text-decoration: none;
-}
-.footer-bottom span{
-    text-transform: uppercase;
-    opacity: .4;
-    font-weight: 200;
-}
-.footer-menu{
-  float: right;
-
-}
-.footer-menu ul{
-  display: flex;
-}
-.footer-menu ul li{
-padding-right: 10px;
-display: block;
-}
-.footer-menu ul li a{
-  color: #cfd2d6;
-  text-decoration: none;
-}
-.footer-menu ul li a:hover{
-  color: #27bcda;
-}
-
-@media (max-width:500px)
-{
-.footer-menu ul{
-  display: flex;
-  margin-top: 10px;
-  margin-bottom: 20px;
-}
+.ig {
+  width: 300px;
+  border: 2px solid white;
 }
 
 .flip-box {
-    background-color: transparent;
-    width: 300px;
-    height: 200px;
-    border: 1px solid #f1f1f1;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  }
-  
-  /* This container is needed to position the front and back side */
-  .flip-box-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
-  /* Do an horizontal flip when you move the mouse over the flip box container */
-  .flip-box:hover .flip-box-inner {
-    transform: rotateY(180deg);
-  }
-  
-  /* Position the front and back side */
-  .flip-box-front, .flip-box-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
-    backface-visibility: hidden;
-  }
-  
-  /* Style the front side (fallback if image is missing) */
-  .flip-box-front {
-    background-color: #bbb;
-    color: black;
-  }
-  
-  /* Style the back side */
-  .flip-box-back {
-    background-color: dodgerblue;
-    color: white;
-    transform: rotateY(180deg);
-  }
+  background-color: transparent;
+  width: 400px;
+  height: 400px;
+  padding-left: 5%;
+  padding-top: 5%;
+  perspective: 1000px;
+  /* Remove this if you don't want the 3D effect */
+}
 
-  input[type=file] { 
-    width: 5px; 
-    visibility: hidden;
+
+/* This container is needed to position the front and back side */
+.flip-box-inner {
+  position: relative;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  transition: transform 1.5s;
+  transform-style: preserve-3d;
+}
+
+.flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-box-front,
+.flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the back side */
+.flip-box-back {
+  background-color: white;
+  transform: rotateY(180deg);
+}
+
+
+.flip-box1 {
+  background-color: transparent;
+  width: 400px;
+  height: 400px;
+  padding-left: 5%;
+  padding-top: 5%;
+  position: absolute;
+  left: 400px;
+  bottom: 57px;
+  perspective: 1000px;
+  /* Remove this if you don't want the 3D effect */
+}
+
+
+/* This container is needed to position the front and back side */
+.flip-box1-inner {
+  position: relative;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  transition: transform 1.5s;
+  transform-style: preserve-3d;
+}
+
+.flip-box1:hover .flip-box1-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-box1-front,
+.flip-box1-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the back side */
+.flip-box1-back {
+  background-color: white;
+  transform: rotateY(180deg);
+}
+
+.Discription
+{
+  background-color: #FFEEEE; 
+  width:40%;
+  height:70%;
+  float: left;
+  position: absolute;
+  left:850px;
+  bottom:48px;
+}
+.inspired1 {
+  float: left;
+  color: #000;
+  font-size: 44px;
+  font-family: 'sans-serif';
+}
+.newarrivals {
+  background-color: #FFEEEE;
+  padding-top: 20px;
+  padding-bottom: 5px;
+  display: flex;
+  filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.5));
+}
+
+.container-1 {
+  filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.5));
+}
+
+.container1 {
+  background-color: #FFEEEE;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+}
+
+.outerbox1 {
+  background-color: #1A132F;
+  width: 280px;
+  height: 420px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  box-shadow: 5px 5px 5px rgba(255, 255, 255, 0.25);
+  border-radius: 15px;
+}
+
+.images {
+  width: 84%;
+  height: 70%;
+  margin-left: 15px;
+  margin-top: 20px;
+  border-radius: 5px;
+}
+
+.enlarge {
+  width: 300px;
+  height: 500px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.enlarge img {
+  width: 90%;
+  transition: 0.5s all ease-in-out;
+}
+
+.enlarge:hover img {
+  transform: scale(1.5);
+}
+
+.addtocart {
+  background-color: #FFEEEE;
+  width: 250px;
+  height: 30px;
+  border-radius: 6px;
+  position: relative;
+  left: 15px;
+  bottom: 15px;
+  text-align: center;
+
+}
+
+p {
+  text-align: center;
+  color: white;
+  padding-top: 5px;
+}
+
+.heading {
+  color: black;
+  font-size: 30px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: #fcfcfc;
+  font-family: sans-serif;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #111;
+  height: auto;
+  width: 100vw;
+
+  padding-top: 40px;
+  color: #fff;
+}
+
+.footer-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.footer-content h3 {
+  font-size: 2.1rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  line-height: 3rem;
+}
+
+.footer-content p {
+  max-width: 500px;
+  margin: 10px auto;
+  line-height: 28px;
+  font-size: 14px;
+  color: #cacdd2;
+}
+
+.socials {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0 3rem 0;
+}
+
+.socials li {
+  margin: 0 10px;
+}
+
+.socials a {
+  text-decoration: none;
+  color: #fff;
+  border: 1.1px solid white;
+  padding: 5px;
+
+  border-radius: 50%;
+
+}
+
+.socials a i {
+  font-size: 1.1rem;
+  width: 20px;
+
+
+  transition: color .4s ease;
+
+}
+
+.socials a:hover i {
+  color: aqua;
+}
+
+.footer-bottom {
+  background: #000;
+  width: 100vw;
+  padding: 20px;
+  padding-bottom: 40px;
+  text-align: center;
+}
+
+.footer-bottom p {
+  float: left;
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.footer-bottom p a {
+  color: #44bae8;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.footer-bottom span {
+  text-transform: uppercase;
+  opacity: .4;
+  font-weight: 200;
+}
+
+.footer-menu {
+  float: right;
+
+}
+
+.footer-menu ul {
+  display: flex;
+}
+
+.footer-menu ul li {
+  padding-right: 10px;
+  display: block;
+}
+
+.footer-menu ul li a {
+  color: #cfd2d6;
+  text-decoration: none;
+}
+
+.footer-menu ul li a:hover {
+  color: #27bcda;
+}
+
+@media (max-width:500px) {
+  .footer-menu ul {
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
 }
